@@ -23,6 +23,7 @@ package org.apache.hadoop.hbase.regionserver;
 import org.apache.hadoop.hbase.HBaseTestCase;
 import org.apache.hadoop.hbase.HConstants;
 import org.apache.hadoop.hbase.KeyValue;
+import org.apache.hadoop.hbase.regionserver.DeleteTracker.DeleteResult;
 import org.apache.hadoop.hbase.util.Bytes;
 
 
@@ -42,8 +43,8 @@ public class TestScanDeleteTracker extends HBaseTestCase {
     deleteType = KeyValue.Type.Delete.getCode();
 
     sdt.add(qualifier, 0, qualifier.length, timestamp, deleteType);
-    boolean ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
-    assertEquals(true, ret);
+    DeleteResult ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
+    assertEquals(DeleteResult.VERSION_DELETED, ret);
   }
 
   public void testDeletedBy_DeleteColumn() {
@@ -52,8 +53,8 @@ public class TestScanDeleteTracker extends HBaseTestCase {
 
     sdt.add(qualifier, 0, qualifier.length, timestamp, deleteType);
     timestamp -= 5;
-    boolean ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
-    assertEquals(true, ret);
+    DeleteResult ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
+    assertEquals(DeleteResult.COLUMN_DELETED, ret);
   }
 
   public void testDeletedBy_DeleteFamily() {
@@ -63,8 +64,8 @@ public class TestScanDeleteTracker extends HBaseTestCase {
     sdt.add(qualifier, 0, qualifier.length, timestamp, deleteType);
 
     timestamp -= 5;
-    boolean ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
-    assertEquals(true, ret);
+    DeleteResult ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
+    assertEquals(DeleteResult.FAMILY_DELETED, ret);
   }
 
   public void testDelete_DeleteColumn() {
@@ -78,8 +79,8 @@ public class TestScanDeleteTracker extends HBaseTestCase {
     sdt.add(qualifier, 0, qualifier.length, timestamp, deleteType);
 
     timestamp -= 5;
-    boolean ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
-    assertEquals(true, ret);
+    DeleteResult ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
+    assertEquals(DeleteResult.COLUMN_DELETED, ret);
   }
 
 
@@ -93,8 +94,8 @@ public class TestScanDeleteTracker extends HBaseTestCase {
     deleteType = KeyValue.Type.Delete.getCode();
     sdt.add(qualifier, 0, qualifier.length, timestamp, deleteType);
 
-    boolean ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
-    assertEquals(true, ret);
+    DeleteResult ret = sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
+    assertEquals( DeleteResult.VERSION_DELETED, ret);
   }
 
   //Testing new way where we save the Delete in case of a Delete for specific
@@ -108,6 +109,5 @@ public class TestScanDeleteTracker extends HBaseTestCase {
     sdt.isDeleted(qualifier, 0, qualifier.length, timestamp);
     assertEquals(false ,sdt.isEmpty());
   }
-
 
 }
